Add Google site verification meta tag
Added Google site verification meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="google-site-verification" content="GFiZS0g6dSghKqKXx_Q8Eko4IdUYDj03CG5jYHMyw5k" />
   <title>Toko Fashion</title>
   <meta name="description" content="Toko fashion temanmu - tema pink. Produk, ulasan customer, kontak." />
   <style>
@@ -386,4 +387,5 @@ button[type=submit]{background:var(--pink-dark); color:white; padding:10px 14px;
     </div>
 </footer>
   </body>
+
 </html>
