Add Google verification site meta tag
Added Google verification site meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="google-site-verification" content="GFiZS0g6dSghKqKXx_Q8Eko4IdUYDj03CG5jYHMyw5k" />
-  <title>Toko Fashion</title>
+  <title>Toko Fashion Pink Collection</title>
   <meta name="description" content="Toko fashion temanmu - tema pink. Produk, ulasan customer, kontak." />
   <style>
     :root{
@@ -389,3 +389,4 @@ button[type=submit]{background:var(--pink-dark); color:white; padding:10px 14px;
   </body>
 
 </html>
+
